@@ -6,7 +6,13 @@ import com.team.final8teamproject.contact.dto.NoticeRequest;
 import com.team.final8teamproject.contact.dto.NoticeResponse;
 import com.team.final8teamproject.contact.dto.UpdateNoticeRequest;
 import com.team.final8teamproject.contact.entity.Notice;
+import com.team.final8teamproject.share.exception.CustomException;
+import com.team.final8teamproject.share.exception.ExceptionStatus;
 import java.util.List;
+import java.util.stream.Collectors;
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -32,35 +38,42 @@ public class NoticeServiceImpl implements NoticeService {
 
   @Transactional(readOnly = true)
   @Override
-  public List<NoticeResponse> getNoticeList(int page, int size, Direction direction,
+  public Result getNoticeList(int page, int size, Direction direction,
       String properties) {
     Page<Notice> noticeListPage = noticeRepository.findAll(
-        PageRequest.of(page, size, direction, properties));
-    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new)
-        .toList();
-    return noticeResponses;
+        PageRequest.of(page-1, size, direction, properties));
+    if(noticeListPage.isEmpty()){
+      throw new CustomException(ExceptionStatus.POST_IS_EMPTY);
+    }
+    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new).collect(
+        Collectors.toList());
+    return new Result(noticeResponses.size(),noticeResponses);
   }
 
   @Transactional(readOnly = true)
   @Override
   public NoticeResponse getSelectedNotice(Long id) {
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     return new NoticeResponse(notice);
   }
 
   @Transactional(readOnly = true)
   @Override
-  public List<NoticeResponse> searchByKeyword(String keyword, int page, int size,
+  public Result searchByKeyword(String keyword, int page, int size,
       Direction direction, String properties) {
     String title = keyword;
     String content = keyword;
-    Page<Notice> noticeListPage = noticeRepository.findAllByTitleContainingOrContentContaining(title, content,
+    Page<Notice> noticeListPage = noticeRepository.findAllByTitleContainingOrContentContaining(
+        title, content,
         PageRequest.of(page - 1, size, direction, properties));
-    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new)
-        .toList();
-    return noticeResponses;
+    if(noticeListPage.isEmpty()){
+      throw new CustomException(ExceptionStatus.POST_IS_EMPTY);
+    }
+    List<NoticeResponse> noticeResponses = noticeListPage.stream().map(NoticeResponse::new).collect(
+        Collectors.toList());
+    return new Result(noticeResponses.size(),noticeResponses);
   }
 
   @Transactional
@@ -70,13 +83,13 @@ public class NoticeServiceImpl implements NoticeService {
     String content = updateNoticeRequest.getContent();
 
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     if (notice.getManagerId().equals(managerId)) {
-      notice.update(title,content);
+      notice.update(title, content);
       noticeRepository.save(notice);
     } else {
-      throw new IllegalArgumentException("접근 할 수 있는 권한이 없습니다.");
+      throw new CustomException(ExceptionStatus.ACCESS_DENINED);
     }
 
   }
@@ -85,13 +98,30 @@ public class NoticeServiceImpl implements NoticeService {
   @Override
   public void deleteNotice(Long id, Long managerId) {
     Notice notice = noticeRepository.findById(id).orElseThrow(
-        () -> new IllegalArgumentException("해당 공지사항이 존재하지 않습니다.")
+        () -> new CustomException(ExceptionStatus.BOARD_NOT_EXIST)
     );
     if (notice.getManagerId().equals(managerId)) {
       noticeRepository.delete(notice);
     } else {
-      throw new IllegalArgumentException("접근 할 수 있는 권한이 없습니다.");
+      throw new CustomException(ExceptionStatus.ACCESS_DENINED);
     }
+
   }
 
+  @Getter
+  @NoArgsConstructor(access = AccessLevel.PROTECTED)
+  public static class Result<T> {
+    private T count;
+    private T data;
+
+
+    public Result(T data) {
+      this.data = data;
+    }
+
+    public Result(T count, T data) {
+      this.count = count;
+      this.data = data;
+    }
+  }
 }
